# MediaPlayer_QML

./: CMakeLists.txt  Main.qml  PopupTimer.qml  README.md  main.cpp  v02_mediaPlayer
